--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from st.ourhtmldemo.com/new/Transida2/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 06 Dec 2021 06:37:24 GMT -->
+<!-- Mirrored from st.ourhtmldemo.com/new/Transida2/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 06 Dec 2021 06:34:48 GMT -->
 <head>
 <meta charset="utf-8">
 <title>Transide  Transport & Logistics HTML Template</title>
@@ -11,12 +11,12 @@
 <!-- Responsive File -->
 <link href="assets/css/responsive.css" rel="stylesheet">
 <!-- Color File -->
-<link href="assets/css/color.css" rel="stylesheet">
+<link href="assets/css/color-2.css" rel="stylesheet">
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&amp;family=Yantramanav:wght@300;400;500;700;900&amp;display=swap" rel="stylesheet">
 
-<link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-<link rel="icon" href="assets/images/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="assets/images/favicon-2.png" type="image/x-icon">
+<link rel="icon" href="assets/images/favicon-2.png" type="image/x-icon">
 
 <!-- Responsive -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,19 +25,12 @@
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 </head>
 
-<body>
+<body class="color-style-two">
 
 <div class="page-wrapper">
-    <!-- Preloader -->
-    <div class="loader-wrap">
-        <div class="preloader"><div class="preloader-close">Preloader Close</div></div>
-        <div class="layer layer-one"><span class="overlay"></span></div>
-        <div class="layer layer-two"><span class="overlay"></span></div>        
-        <div class="layer layer-three"><span class="overlay"></span></div>        
-    </div>
-
+    
     <!-- Main Header -->
-    <header class="main-header header-style-one">
+    <header class="main-header header-style-two">
 
         <!-- Header Top -->
         <div class="header-top">
@@ -70,6 +63,7 @@
                             </form>
                         </div>
                         <div class="phone-number"><i class="flaticon-calling"></i><a href="tel:(+61)32456789"></a>(+61) 324 56 789</div>
+                        <div class="mail-address"><i class="flaticon-mail"></i>(<a href="tel:(+61)32456789790">info@transida.com</a></div>
                     </div>
                 </div>
             </div>
@@ -81,7 +75,40 @@
                 <div class="inner-container">
                     <!--Logo-->
                     <div class="logo-box">
-                        <div class="logo"><a href="index-2.html"><img src="assets/images/logo.png" alt=""></a></div>
+                        <div class="logo"><a href="index.html"><img src="assets/images/logo-v2.png" alt=""></a></div>
+                    </div>
+                    <div class="header-left-option">
+                        <div class="option-box">
+                            <div class="icon"><span class="flaticon-tracking"></span></div>
+                            <h4>Track Shipment <i class="flaticon-up-arrow"></i></h4>
+                            <div class="order-form-area">
+                                <div class="wrapper-box">
+                                    <h4>Track Your Shipment</h4>
+                                    <form class="order-form">
+                                        <div class="form-group">
+                                            <input type="text" placeholder="Enter Shipment Number *">
+                                        </div>
+                                        <div class="form-group">
+                                            <select class="selectpicker" name="make">
+                                                <option value="*">Type of Reference *</option>
+                                                <option value=".category-1">Package</option>
+                                                <option value=".category-3">Freight</option>
+                                                <option value=".category-4">Mail of Innovations</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="theme-btn btn-style-one"><span><i class="flaticon-up-arrow"></i>Track Now</span></button>
+                                        </div>
+                                    </form>
+                                </div>                        
+                            </div>
+                        </div>
+                        <div class="option-box">
+                            <a href="request-quote.html">
+                                <div class="icon"><span class="flaticon-test"></span></div>
+                                <h4>Get A Quote <i class="flaticon-up-arrow"></i></h4>
+                            </a>
+                        </div>
                     </div>
                     <div class="right-column">
                         <!--Nav Box-->
@@ -92,66 +119,17 @@
                             <!-- Main Menu -->
                             <nav class="main-menu navbar-expand-md navbar-light">
                                 <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
-                                    <ul class="navigation">
-                                        <li class="dropdown"><a href="index-2.html">Home</a>
-                                            <ul>
-                                                <li><a href="index-2.html">Home Page 01</a></li>
-                                                <li><a href="index-3.html">Home Page 02</a></li>
-                                                <li><a href="index-4.html">Home Page 03</a></li>
-                                                <li><a href="index-5.html">Home Page 04</a></li>
-                                                <li><a href="onepage.html">Onepage</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown"><a href="about.html">About Us</a>
-                                            <ul>
-                                                <li><a href="about.html">About Company</a></li>
-                                                <li><a href="history.html">History</a></li>
-                                                <li><a href="team.html">Leadership Team</a></li>
-                                                <li><a href="global-networks.html">Global Networks</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown"><a href="service-1.html">Services</a>
-                                            <ul>
-                                                <li><a href="service.html">Services</a></li>
-                                                <li><a href="air-freight.html"> Air Freight </a></li>
-                                                <li><a href="ocean-freight.html">Ocean Freight </a></li>
-                                                <li><a href="road-freight.html">Road Freight </a></li>
-                                                <li><a href="train-freight.html">Train Freight </a></li>
-                                                <li><a href="warehousing.html">Warehousing </a></li>
-                                                <li class="active"><a href="packaging.html">Packaging</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown"><a href="#">Pages</a>
-                                            <ul>
-                                                <li class="dropdown"><a href="#">Portfolio</a>
-                                                    <ul>
-                                                        <li><a href="portfolio.html">Portfolio 02 Column</a></li>
-                                                        <li><a href="portfolio-2.html">Portfolio 03 Column</a></li>
-                                                        <li><a href="portfolio-3.html">Portfolio 04 Column</a></li>
-                                                        <li><a href="portfolio-details.html">Portfolio Details</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="404.html">404</a></li>
-                                                <li><a href="faq.html">FAQ's</a></li>
-                                                <li><a href="request-quote.html">Request a Quote</a></li>
-                                                <li><a href="pricing-plan.html">Pricig Plan</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown"><a href="#">Blog</a>
-                                            <ul>
-                                                <li><a href="blog.html">3 Columns Grid </a></li>
-                                                <li><a href="blog-2.html">3 Columns Sidebar</a></li>
-                                                <li><a href="blog-3.html">Large Image</a></li>
-                                                <li><a href="blog-details.html">Single Post</a></li>
-                                            </ul>
-                                        </li>
+                                    <ul class="navigation"> 
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="about.html">About Us</a></li>
+                                        <li><a href="service.html">services</a></li> 
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </div>
                             </nav>
                         </div>
                         <div class="navbar-right-info">
-                            <div class="sign-in"><a href="#"><i class="flaticon-delivery-man"></i>Sign In</a></div>
+                            <div class="sign-in"><a href="#"><i class="flaticon-delivery-man-1"></i>Sign In</a></div>
                             <div class="language">
                                 <span class="icon"><img src="assets/images/resource/flags/de.png" alt=""></span>
                                 <form action="#" class="language-switcher">
@@ -177,7 +155,40 @@
                     <div class="inner-container">
                         <!--Logo-->
                         <div class="logo-box">
-                            <div class="logo"><a href="index-2.html"><img src="assets/images/logo.png" alt=""></a></div>
+                            <div class="logo"><a href="index-2.html"><img src="assets/images/logo-v2.png" alt=""></a></div>
+                        </div>
+                        <div class="header-left-option">
+                            <div class="option-box">
+                                <div class="icon"><span class="flaticon-tracking"></span></div>
+                                <h4>Track Shipment <i class="flaticon-up-arrow"></i></h4>
+                                <div class="order-form-area">
+                                    <div class="wrapper-box">
+                                        <h4>Track Your Shipment</h4>
+                                        <form class="order-form">
+                                            <div class="form-group">
+                                                <input type="text" placeholder="Enter Shipment Number *">
+                                            </div>
+                                            <div class="form-group">
+                                                <select class="selectpicker" name="make">
+                                                    <option value="*">Type of Reference *</option>
+                                                    <option value=".category-1">Package</option>
+                                                    <option value=".category-3">Freight</option>
+                                                    <option value=".category-4">Mail of Innovations</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <button type="submit" class="theme-btn btn-style-one"><span><i class="flaticon-up-arrow"></i>Track Now</span></button>
+                                            </div>
+                                        </form>
+                                    </div>                        
+                                </div>
+                            </div>
+                            <div class="option-box">
+                                <a href="request-quote.html">
+                                    <div class="icon"><span class="flaticon-test"></span></div>
+                                    <h4>Get A Quote<i class="flaticon-up-arrow"></i></h4>
+                                </a>
+                            </div>
                         </div>
                         <div class="right-column">
                             <!--Nav Box-->
@@ -215,7 +226,7 @@
             <div class="close-btn"><span class="icon flaticon-remove"></span></div>
             
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index-2.html"><img src="assets/images/logo.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index-2.html"><img src="assets/images/logo-v2.png" alt="" title=""></a></div>
                 <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header--></div>
 				<!--Social Links-->
 				<div class="social-links">
