--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from st.ourhtmldemo.com/new/Transida2/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 06 Dec 2021 06:34:48 GMT -->
+<!-- Mirrored from st.ourhtmldemo.com/new/Dotsdelivery2/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 06 Dec 2021 06:34:48 GMT -->
 <head>
 <meta charset="utf-8">
 <title>Transide  Transport & Logistics HTML Template</title>
@@ -63,7 +63,7 @@
                             </form>
                         </div>
                         <div class="phone-number"><i class="flaticon-calling"></i><a href="tel:(+61)32456789"></a>(+61) 324 56 789</div>
-                        <div class="mail-address"><i class="flaticon-mail"></i>(<a href="tel:(+61)32456789790">info@transida.com</a></div>
+                        <div class="mail-address"><i class="flaticon-mail"></i>(<a href="tel:(+61)32456789790">info@Dotsdelivery.com</a></div>
                     </div>
                 </div>
             </div>
@@ -254,7 +254,7 @@
         <div class="popup-inner">
             <div class="overlay-layer"></div>
             <div class="search-form">
-                <form method="post" action="http://st.ourhtmldemo.com/new/Transida2/index.html">
+                <form method="post" action="http://st.ourhtmldemo.com/new/Dotsdelivery2/index.html">
                     <div class="form-group">
                         <fieldset>
                             <input type="search" class="form-control" name="search-input" value="" placeholder="Search Here" required >
@@ -344,15 +344,17 @@
                 <div class="col-lg-6">
                     <div class="content">
                         <div class="quote"><span class="flaticon-right-quote"></span></div>
-                        <h3>Simplifying your freight & logistics needs with a <br>
-                            personal approach.</h3>
-                        <div class="text wow fadeInUp" data-wow-duration="1500ms">Denounce with righteous indignation and dislike men who are  beguiled and demoralized by the charms of pleasure of the moment so blinded by desire, that they cannot foresee the pain and trouble.
+                        <h3>Fast Delivery Solutions | Reliable | Affordable</h3>
+                        <div class="text wow fadeInUp" data-wow-duration="1500ms">
+                            Every day, we strive to make sure that crucial personal and business packages are delivered exactly where they're supposed to be and arrive in time, every time.
+
+                            We'll go that extra mile for you and you can trust us to deliver your parcel or letter to where you require it to arrive.
                         </div>
                         <div class="author-info wow fadeInUp" data-wow-duration="1500ms">
                             <div class="signature"><img src="assets/images/resource/sign.png" alt=""></div>
                             <div>
                                 <div class="author-title">Roman Primera </div>
-                                <div class="designation">CEO & Founder of Transida</div>
+                                <div class="designation">CEO & Founder of Dotsdelivery</div>
                             </div>
                         </div>
                         <div class="row">
@@ -445,8 +447,10 @@
                             </div>
                         </div>
                         <div class="lower-content">
-                            <div class="text">Indignation and dislike men who <br> are so beguiled all demoralized by the <br>that all charms.</div>
-                            <div class="link"><a href="air-freight.html" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
+                            <div class="text">
+                                We offer Superior Logistics Services and Brokering Air Freight, Air Charter, and Ground Expedited Freight Services Nationwide.
+                            </div>
+                            <div class="link"><a href="" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                         </div>
                         <div class="overlay" style="background-image: url(assets/images/resource/image-12-2.jpg);">
                             <div>
@@ -454,8 +458,10 @@
                                     <div class="icon"><span class="flaticon-airplane"></span></div>
                                     <h4>Air Freight</h4>
                                 </div>
-                                <div class="text">Indignation and dislike men who <br> are so beguiled all demoralized by the <br>that all charms.</div>
-                                <div class="link"><a href="air-freight.html" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
+                                <div class="text">
+                                    We offer Superior Logistics Services and Brokering Air Freight, Air Charter, and Ground Expedited Freight Services Nationwide.
+                                </div>
+                                <div class="link"><a href="" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -472,8 +478,10 @@
                             </div>
                         </div>
                         <div class="lower-content">
-                            <div class="text">Denouncing pleasure praising <br> pain was born and we will give you a <br>account of the system.</div>
-                            <div class="link"><a href="ocean-freight.html" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
+                            <div class="text">
+                                Our experts are at your disposal to guide you through the ways and the means of international sea freight to you. We offer extensive advice and consultation for all our clients. We can aid you in understanding the financial transactions you make with a thorough cost analysis.
+                            </div>
+                            <div class="link"><a href="" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                         </div>
                         <div class="overlay" style="background-image: url(assets/images/resource/image-13-2.jpg);">
                             <div>
@@ -481,8 +489,10 @@
                                     <div class="icon"><span class="flaticon-cargo-ship"></span></div>
                                     <h4>Ocean Freight</h4>
                                 </div>
-                                <div class="text">Denouncing pleasure praising <br> pain was born and we will give you a <br>account of the system.</div>
-                                <div class="link"><a href="ocean-freight.html" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
+                                <div class="text">
+                                    Our experts are at your disposal to guide you through the ways and the means of international sea freight to you. We offer extensive advice and consultation for all our clients. We can aid you in understanding the financial transactions you make with a thorough cost analysis.
+                                </div>
+                                <div class="link"><a href="" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -499,8 +509,10 @@
                             </div>
                         </div>
                         <div class="lower-content">
-                            <div class="text">Great explorer of the truth the <br> master-builder of human happiness no <br>because it is pleasure.</div>
-                            <div class="link"><a href="road-freight.html" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
+                            <div class="text">
+                                It's not all about how quickly you can deliver an item. It must be delivered in a safe manner, and be delivered to the right person at the right time. With a focus on speed and reliability, our company has become a force to reckon with when it comes to the delivery of parcels, letters, and packages to both individuals and companies.
+                            </div>
+                            <div class="link"><a href="" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                         </div>
                         <div class="overlay" style="background-image: url(assets/images/resource/image-14-2.jpg);">
                             <div>
@@ -508,8 +520,10 @@
                                     <div class="icon"><span class="flaticon-truck"></span></div>
                                     <h4>Road Freight</h4>
                                 </div>
-                                <div class="text">Great explorer of the truth the <br> master-builder of human happiness no <br>because it is pleasure.</div>
-                                <div class="link"><a href="road-freight.html" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
+                                <div class="text">
+                                    It's not all about how quickly you can deliver an item. It must be delivered in a safe manner, and be delivered to the right person at the right time. With a focus on speed and reliability, our company has become a force to reckon with when it comes to the delivery of parcels, letters, and packages to both individuals and companies.
+                                </div>
+                                <div class="link"><a href="" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -598,7 +612,7 @@
                             <div class="text"> Manager of Relationship Team</div>
                             <ul class="contact-info">
                                 <li><a href="tel:(+61)32456789"><i class="flaticon-calling"></i>(+61) 324 56 789</a></li>
-                                <li><a href="mailto:investorinquire@transida.com"><i class="flaticon-mail"></i>investorinquire@transida.com</a></li>
+                                <li><a href="mailto:hr@dotsdelivery.com"><i class="flaticon-mail"></i>hr@dotsdelivery.com</a></li>
                             </ul>
                             <form>
                                 <input type="email" placeholder="Your Email Address">
@@ -625,9 +639,8 @@
                         <div class="inner-box wow fadeInUp" data-wow-duration="1500ms">
                             <div class="icon"><span class="flaticon-shipping"></span></div>
                             <div class="count">01</div>
-                            <h4>Replenishment <br> & Picking</h4>
-                            <div class="text">Dolores quas molestias <br>  excepturi occaecati cupiditated <br> non provident.</div>
-                            <a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a>
+                            <h4>Safety </h4>
+                            <div class="text">Supplies and finished products must arrive in perfect condition</div> 
                         </div>
                     </div>
                     <!-- Work Process Block -->
@@ -635,11 +648,10 @@
                         <div class="inner-box wow fadeInUp" data-wow-duration="1500ms">
                             <div class="icon"><span class="flaticon-warehouse"></span></div>
                             <div class="count">02</div>
-                            <h4>Warehousing <br> Operation</h4>
-                            <div class="text">It will frequently occur
-                                that pleasures have to repudiated
-                                annoyances accepted.</div>
-                            <a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a>
+                            <h4>Accessibility</h4>
+                            <div class="text">
+                                With dedicated 24/7/365 customer service and detailed freight tracking information, regardless of the size of your cargo
+                            </div> 
                         </div>
                     </div>
                     <!-- Work Process Block -->
@@ -647,11 +659,10 @@
                         <div class="inner-box wow fadeInUp" data-wow-duration="1500ms">
                             <div class="icon"><span class="flaticon-packing-list"></span></div>
                             <div class="count">03</div>
-                            <h4>Packaging <br> & Distribution</h4>
-                            <div class="text">Ever undertakes laborious
-                                physical exercise excepts obtain
-                                some advantage right.</div>
-                            <a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a>
+                            <h4>Economical</h4>
+                            <div class="text">
+                                Ship your freight without breaking the bottom line by selecting from an extensive suite of services to fit your budget
+                            </div> 
                         </div>
                     </div>
                     <!-- Work Process Block -->
@@ -659,11 +670,10 @@
                         <div class="inner-box wow fadeInUp" data-wow-duration="1500ms">
                             <div class="icon"><span class="flaticon-delivery-1"></span></div>
                             <div class="count">04</div>
-                            <h4>Transportation <br> Process</h4>
-                            <div class="text">Nothing prevents our
-                                being able to do what like work
-                                best every pleasure </div>
-                            <a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a>
+                            <h4>Speed</h4>
+                            <div class="text">
+                                Through multiple transportation channels across the country, seamlessly
+                            </div> 
                         </div>
                     </div>
                     <!-- End Column -->
@@ -815,7 +825,7 @@
                             </div>
                             <h4>Nathan Felix</h4>
                             <div class="designation">CEO, High Rise Construction</div>
-                            <div class="text">I am only use Transida logistics for my 
+                            <div class="text">I am only use Dots Delivery for my 
                                 shipping needs. My clients have all come to expect excellent shipping & handling of their merchandise.
                             </div>
                         </div>
@@ -829,7 +839,7 @@
                             </div>
                             <h4>Lillian Grace</h4>
                             <div class="designation">VP, Green Valley Intenationl</div>
-                            <div class="text">I have been doing business with Transida
+                            <div class="text">I have been doing business with Dotsdelivery
                                 logistics ever since they opened their
                                 doors. The staff is amazing! Loads are
                                 99% on time with best rates.
@@ -846,7 +856,7 @@
                             <h4>Roman Dexter</h4>
                             <div class="designation">Business Man, Newyork, USA</div>
                             <div class="text">I wanted to take a minute to thank you &
-                                your team. I have grown comfortable leaning on Transida Logistics team with some of my end of the day.
+                                your team. I have grown comfortable leaning on Dots Delivery team with some of my end of the day.
                             </div>
                         </div>
                     </div>
@@ -930,7 +940,9 @@
                     <div class="col-lg-4">
                         <div class="about-widget widget">
                             <h4 class="widget_title">Company</h4>
-                            <div class="text">Desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure.</div>
+                            <div class="text">
+                                Our company is dedicated at providing outstanding service to all our customers which is an extension of their own businesses.
+                            </div>
                             <div class="link">
                                 <a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i> More About Us</a>
                             </div>
@@ -989,7 +1001,7 @@
                                 </div>
                                 <div class="icon-box">
                                     <div class="icon"><span class="flaticon-mail"></span></div>
-                                    <div class="text"><strong>Email</strong><a href="tel:(+61)32456789790">info@transida.com</a></div>
+                                    <div class="text"><strong>Email</strong><a href="tel:(+61)32456789790">info@Dotsdelivery.com</a></div>
                                 </div>                                
                                 <div class="icon-box">
                                     <div class="icon"><span class="flaticon-clock-1"></span></div>
@@ -1009,7 +1021,7 @@
         <div class="auto-container">
             <div class="bg">
                 <div class="row m-0 align-items-center justify-content-between">
-                    <div class="copyright-text">Copyright © 2020 <a href="#"> Transida.</a> All Rights Reserved.</div>
+                    <div class="copyright-text">Copyright © 2020 <a href="#"> Dotsdelivery.</a> All Rights Reserved.</div>
                     <ul class="menu">
                         <li><a href="#">Terms & Conditions</a></li>
                         <li><a href="#">Privacy Policy </a></li>
@@ -1048,7 +1060,7 @@
 
 </body>
 
-<!-- Mirrored from st.ourhtmldemo.com/new/Transida2/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 06 Dec 2021 06:35:59 GMT -->
+<!-- Mirrored from st.ourhtmldemo.com/new/Dotsdelivery2/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 06 Dec 2021 06:35:59 GMT -->
 </html>
 
 
