--- a/service.html
+++ b/service.html
@@ -357,7 +357,9 @@
                                 </div>
                             </div>
                             <div class="lower-content">
-                                <div class="text">Indignation and dislike men who <br> are so beguiled all demoralized by the <br>that all charms.</div>
+                                <div class="text">
+                                    Air freight parcel delivery is the transfer and shipment of goods via an air carrier
+                                </div>
                                 <div class="link"><a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                             </div>
                             <div class="overlay" style="background-image: url(assets/images/resource/image-12-2.jpg);">
@@ -366,7 +368,9 @@
                                         <div class="icon"><span class="flaticon-airplane"></span></div>
                                         <h4>Air Freight</h4>
                                     </div>
-                                    <div class="text">Indignation and dislike men who <br> are so beguiled all demoralized by the <br>that all charms.</div>
+                                    <div class="text">
+                                        Air freight parcel delivery is the transfer and shipment of goods via an air carrier
+                                    </div>
                                     <div class="link"><a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                                 </div>
                             </div>
@@ -384,7 +388,7 @@
                                 </div>
                             </div>
                             <div class="lower-content">
-                                <div class="text">Denouncing pleasure praising <br> pain was born and we will give you a <br>account of the system.</div>
+                                <div class="text">With our broad product range, we cover different equipment types and consolidation services to ensure your cargo reaches</div>
                                 <div class="link"><a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                             </div>
                             <div class="overlay" style="background-image: url(assets/images/resource/image-13-2.jpg);">
@@ -393,7 +397,7 @@
                                         <div class="icon"><span class="flaticon-cargo-ship"></span></div>
                                         <h4>Ocean Freight</h4>
                                     </div>
-                                    <div class="text">Denouncing pleasure praising <br> pain was born and we will give you a <br>account of the system.</div>
+                                    <div class="text">With our broad product range, we cover different equipment types and consolidation services to ensure your cargo reaches</div>
                                     <div class="link"><a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                                 </div>
                             </div>
@@ -411,7 +415,9 @@
                                 </div>
                             </div>
                             <div class="lower-content">
-                                <div class="text">Great explorer of the truth the <br> master-builder of human happiness no <br>because it is pleasure.</div>
+                                <div class="text">
+                                    Road Freight is the physical process of transporting cargo by road using motor vehicles. In this case, road is a lane/route between the point of departure
+                                </div>
                                 <div class="link"><a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                             </div>
                             <div class="overlay" style="background-image: url(assets/images/resource/image-14-2.jpg);">
@@ -420,7 +426,9 @@
                                         <div class="icon"><span class="flaticon-airplane"></span></div>
                                         <h4>Road Freight</h4>
                                     </div>
-                                    <div class="text">Great explorer of the truth the <br> master-builder of human happiness no <br>because it is pleasure.</div>
+                                    <div class="text">
+                                        Road Freight is the physical process of transporting cargo by road using motor vehicles. In this case, road is a lane/route between the point of departure
+                                    </div>
                                     <div class="link"><a href="#" class="readmore-link"><i class="flaticon-up-arrow"></i>More Details</a></div>
                                 </div>
                             </div>
@@ -459,7 +467,7 @@
                         </div>
                         <div class="content">
                             <h4>Cargo Insurance</h4>
-                            <div class="text">There anyone who loves or pursues or desires to obtain <br> pain of itself because it is pain but because occasionally <br> circumstances occur in which toil ...</div>
+                            <div class="text">Cargo insurance is the method used in protecting shipments from physical damage or theft. In fact, insuring cargo ensures that the value of goods are protected against potential losses which may occur during air, sea or land transportation.</div>
                             <div class="link">
                                 <a href="#" class="readmore-link"><span><i class="flaticon-up-arrow"></i>Read More</span></a>
                             </div>
@@ -474,7 +482,7 @@
                         </div>
                         <div class="content">
                             <h4>Customs Clearance</h4>
-                            <div class="text">Blinded by desire, that they cannot foresee the pain and <br>trouble that are bound to ensue; and equal blame belongs <br>those who fail in their duty shrinking ...</div>
+                            <div class="text">Once the duties and taxes are assessed by Customs, the importer pays duties and taxes. On payment of duties and taxes assessed, Customs issues release order for clearance and after completion of port formalities, goods are cleared.</div>
                             <div class="link">
                                 <a href="#" class="readmore-link"><span><i class="flaticon-up-arrow"></i>Read More</span></a>
                             </div>
