--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from st.ourhtmldemo.com/new/Transida2/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 06 Dec 2021 06:34:48 GMT -->
+<!-- Mirrored from st.ourhtmldemo.com/new/Dotsdelivery2/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 06 Dec 2021 06:34:48 GMT -->
 <head>
 <meta charset="utf-8">
-<title>Transide  Transport & Logistics HTML Template</title>
+<title>Dotsdeliverye  Transport & Logistics HTML Template</title>
 <!-- Stylesheets -->
 <link href="assets/css/bootstrap.css" rel="stylesheet">
 <link href="assets/css/style.css" rel="stylesheet">
@@ -63,7 +63,7 @@
                             </form>
                         </div>
                         <div class="phone-number"><i class="flaticon-calling"></i><a href="tel:(+61)32456789"></a>(+61) 324 56 789</div>
-                        <div class="mail-address"><i class="flaticon-mail"></i>(<a href="tel:(+61)32456789790">info@transida.com</a></div>
+                        <div class="mail-address"><i class="flaticon-mail"></i>(<a href="tel:(+61)32456789790">info@Dotsdelivery.com</a></div>
                     </div>
                 </div>
             </div>
@@ -286,7 +286,7 @@
                     </div>
                     <div class="icon-box">
                         <div class="icon"><span class="flaticon-mail"></span></div>
-                        <div class="text"><strong>Email</strong><a href="tel:(+61)32456789790">supportyou@transida.com</a></div>
+                        <div class="text"><strong>Email</strong><a href="tel:(+61)32456789790">supportyou@Dotsdelivery.com</a></div>
                     </div>
                 </div>
                 <!-- Link Btn -->
@@ -301,7 +301,7 @@
         <div class="popup-inner">
             <div class="overlay-layer"></div>
             <div class="search-form">
-                <form method="post" action="http://st.ourhtmldemo.com/new/Transida2/index.html">
+                <form method="post" action="http://st.ourhtmldemo.com/new/Dotsdelivery2/index.html">
                     <div class="form-group">
                         <fieldset>
                             <input type="search" class="form-control" name="search-input" value="" placeholder="Search Here" required >
@@ -317,8 +317,8 @@
     <section class="page-title" style="background-image: url(assets/images/background/bg-20.jpg);">
         <div class="background-text">
             <div data-parallax='{"x": 100}'>
-                <div class="text-1">transida</div>
-                <div class="text-2">transida</div>
+                <div class="text-1">Dotsdelivery</div>
+                <div class="text-2">Dotsdelivery</div>
             </div>                
         </div>
         <div class="auto-container">
@@ -327,12 +327,12 @@
                     <div class="title">
                         <h1>About Company</h1>
                     </div>
-                    <ul class="bread-crumb style-two">
+                    <!-- <ul class="bread-crumb style-two">
                         <li class="active"><a href="about.html">About Company <i class="flaticon-up-arrow"></i></a></li>
                         <li><a href="history.html">Our History <i class="flaticon-up-arrow"></i></a></li>
                         <li><a href="team.html">Leadership Team<i class="flaticon-up-arrow"></i></a></li>
                         <li><a href="global-networks.html">Global Network <i class="flaticon-up-arrow"></i></a></li>
-                    </ul>
+                    </ul> -->
                 </div>                    
             </div>
         </div>
@@ -367,12 +367,12 @@
         <div class="overview">
             <div class="auto-container">
                 <div class="wrapper-box">
-                    <h2>Transida has been operating in the US now, for over 78 years and are part <br>  of a reliable, global integrated network.</h2>
+                    <h2>Dotsdelivery has been operating in the US now, for over 78 years and are part <br>  of a reliable, global integrated network.</h2>
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="text">
-                                <p>Denounce with righteous indignation and dislike men who are beguiled likes and demoralized by the charms off pleasures of the moments so blinded by desire, that they cannot foresee the pain and trouble.</p>
-                                <p>Indignationdislike men who are so beguiled & demoralized by the charms of pleasure of the moment so blinded by desire.</p>
+                                <p>Our company is dedicated at providing outstanding service to all our customers which is an extension of their own businesses. </p>
+                                <p>Our service comes complete with personalized attention and customer support that is powered by our dedicated team of logistic professionals.</p>
                             </div>
                             <div class="author-info wow fadeInUp" data-wow-duration="1500ms">
                                 <div class="video-btn">
@@ -381,7 +381,7 @@
                                 <div class="signature"><img src="assets/images/resource/sign.png" alt=""></div>
                                 <div>
                                     <div class="author-title">Roman Primera </div>
-                                    <div class="designation">CEO & Founder of Transida</div>
+                                    <div class="designation">CEO & Founder of Dotsdelivery</div>
                                 </div>
                             </div>
                         </div>
@@ -461,7 +461,7 @@
                                         <div class="sub-title">Statements</div>
                                         <h2>Mission Statement</h2>
                                     </div>
-                                    <div class="text">Dedicated to understanding customer expectations, identifying & developing opportunities that enhance customer supply chain strategies. Our operating philosophy is founded on maintaining the highest level of quality service.</div>
+                                    <div class="text">Our mission is to deliver a positive, reliable experience to each and every one of our clients while offering</div>
                                 </div>
                             </div>
                             <div class="tab-pane fadeInUp animated" id="tab-two" role="tabpanel" aria-labelledby="tab-two">
@@ -470,7 +470,7 @@
                                         <div class="sub-title">Statements</div>
                                         <h2>Vision Statement</h2>
                                     </div>
-                                    <div class="text">Dedicated to understanding customer expectations, identifying & developing opportunities that enhance customer supply chain strategies. Our operating philosophy is founded on maintaining the highest level of quality service.</div>
+                                    <div class="text">Our aim is to act as an indispensable partner to our clients by helping them build and maximize sustainable competitive advantages. </div>
                                 </div>
                             </div>
                             <div class="tab-pane fadeInUp animated" id="tab-three" role="tabpanel" aria-labelledby="tab-three">
@@ -479,7 +479,7 @@
                                         <div class="sub-title">Statements</div>
                                         <h2>Company Value</h2>
                                     </div>
-                                    <div class="text">Dedicated to understanding customer expectations, identifying & developing opportunities that enhance customer supply chain strategies. Our operating philosophy is founded on maintaining the highest level of quality service.</div>
+                                    <div class="text">Trust is everything, and we know how precious and how potentially fragile it is. As a result, every action we take is geared towards building and strengthening the trust our clients put in us.</div>
                                 </div>
                             </div>
                         </div>
@@ -518,8 +518,9 @@
                     <div class="inner-box wow fadeInUp animated" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-name: fadeInUp;">
                         <div class="icon"><span class="flaticon-shield"></span><i class="fas fa-check"></i><a href="#"><i class="fas fa-check"></i>Read More</a></div>
                         <h4>Trasparent Pricing</h4>
-                        <div class="text">Indignation dislike men who
-                            so beguiled all demoralized by the charms.</div>
+                        <div class="text">
+                            Besides our other services, our pricing is also reasonable and transparent
+                        </div>
                         <div class="count">01</div>
                     </div>
                 </div>
@@ -527,7 +528,9 @@
                     <div class="inner-box wow fadeInUp animated" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-name: fadeInUp;">
                         <div class="icon"><span class="flaticon-delivery"></span><i class="fas fa-check"></i><a href="#"><i class="fas fa-check"></i>Read More</a></div>
                         <h4>On - Time Delivery</h4>
-                        <div class="text">Foresee the pain & trouble that are bound ensue equal belongs to fail duty.</div>
+                        <div class="text">
+                            Punctuality is our best attire; we maintain our time as light does 
+                        </div>
                         <div class="count">02</div>
                     </div>
                 </div>
@@ -535,8 +538,9 @@
                     <div class="inner-box wow fadeInUp animated" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-name: fadeInUp;">
                         <div class="icon"><span class="flaticon-box"></span><i class="fas fa-check"></i><a href="#"><i class="fas fa-check"></i>Read More</a></div>
                         <h4>Real Time Tracking</h4>
-                        <div class="text">Indignation dislike men who
-                            so beguiled all demoralized by the charms.</div>
+                        <div class="text">
+                            With real-time tracking, you can rest assured that your product is in good hands
+                        </div>
                         <div class="count">03</div>
                     </div>
                 </div>
@@ -544,7 +548,9 @@
                     <div class="inner-box wow fadeInUp animated" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-name: fadeInUp;">
                         <div class="icon"><span class="flaticon-24-hours"></span><i class="fas fa-check"></i><a href="#"><i class="fas fa-check"></i>Read More</a></div>
                         <h4>24/7 Online Support</h4>
-                        <div class="text">Foresee the pain & trouble that are bound ensue equal belongs to fail duty.</div>
+                        <div class="text">
+                            To be reliable to our customers, we offer 24-hour customer services
+                        </div>
                         <div class="count">04</div>
                     </div>
                 </div>
@@ -639,7 +645,7 @@
                                         </div>
                                         <div class="icon-box">
                                             <div class="icon"><span class="flaticon-mail"></span></div>
-                                            <div class="text"><strong>Email</strong><a href="tel:(+61)32456789790">info@transida.com</a></div>
+                                            <div class="text"><strong>Email</strong><a href="tel:(+61)32456789790">info@Dotsdelivery.com</a></div>
                                         </div>
                                         <ul class="social-icon">
                                             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -720,7 +726,7 @@
     <div class="footer-bottom">
         <div class="auto-container">
             <div class="row m-0 align-items-center justify-content-between">
-                <div class="copyright-text">Copyright © 2020 <a href="#"> Transida.</a> All Rights Reserved.</div>
+                <div class="copyright-text">Copyright © 2020 <a href="#"> Dotsdelivery.</a> All Rights Reserved.</div>
                 <ul class="menu">
                     <li><a href="#">Terms & Conditions</a></li>
                     <li><a href="#">Privacy Policy </a></li>
@@ -758,7 +764,7 @@
 
 </body>
 
-<!-- Mirrored from st.ourhtmldemo.com/new/Transida2/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 06 Dec 2021 06:37:40 GMT -->
+<!-- Mirrored from st.ourhtmldemo.com/new/Dotsdelivery2/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 06 Dec 2021 06:37:40 GMT -->
 </html>
 
 
