--- a/service.html
+++ b/service.html
@@ -63,7 +63,7 @@
                             </form>
                         </div>
                         <div class="phone-number"><i class="flaticon-calling"></i><a href="tel:(+61)32456789"></a>(+61) 324 56 789</div>
-                        <div class="mail-address"><i class="flaticon-mail"></i>(<a href="tel:(+61)32456789790">info@transida.com</a></div>
+                        <div class="mail-address"><i class="flaticon-mail"></i><a href="mailto:info@Dotsdelivery.com">info@dotsdelivery.com</a></div>
                     </div>
                 </div>
             </div>
@@ -533,7 +533,7 @@
                                         </div>
                                         <div class="icon-box">
                                             <div class="icon"><span class="flaticon-mail"></span></div>
-                                            <div class="text"><strong>Email</strong><a href="tel:(+61)32456789790">info@transida.com</a></div>
+                                            <div class="text"><strong>Email</strong><a href="mailto:info@Dotsdelivery.com">info@dotsdelivery.com</a></div>
                                         </div>
                                         <ul class="social-icon">
                                             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
