--- a/contact.html
+++ b/contact.html
@@ -55,15 +55,15 @@
                             <span class="flaticon-cursor"></span>
                             <form action="#" class="location-switcher">
                                 <select class="selectpicker">
-                                    <option value="1">Melbourne</option>
+                                    <option value="1">Canada</option>
                                     <option value="2">New York</option>
-                                    <option value="3">Chicago</option>
-                                    <option value="4">Boston</option>
+                                    <option value="3">Texas</option>
+                                    <option value="4">California</option>
                                 </select>
                             </form>
                         </div>
                         <div class="phone-number"><i class="flaticon-calling"></i><a href="tel:(+61)32456789"></a>(+61) 324 56 789</div>
-                        <div class="mail-address"><i class="flaticon-mail"></i>(<a href="tel:(+61)32456789790">info@transida.com</a></div>
+                        <div class="mail-address"><i class="flaticon-mail"></i><a href="mailto:info@dotsdelivery.com">info@dotsdelivery.com</a></div>
                     </div>
                 </div>
             </div>
@@ -728,7 +728,7 @@
                                         </div>
                                         <div class="icon-box">
                                             <div class="icon"><span class="flaticon-mail"></span></div>
-                                            <div class="text"><strong>Email</strong><a href="tel:(+61)32456789790">info@transida.com</a></div>
+                                            <div class="text"><strong>Email</strong><a href="mailto:info@dotsdelivery.com">info@dotsdelivery.com</a></div>
                                         </div>
                                         <ul class="social-icon">
                                             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
