--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                             <span class="flaticon-cursor"></span>
                             <form action="#" class="location-switcher">
                                 <select class="selectpicker">
-                                    <option value="1">Melbourne</option>
+                                    <option value="1">Canada</option>
                                     <option value="2">New York</option>
-                                    <option value="3">Chicago</option>
-                                    <option value="4">Boston</option>
+                                    <option value="3">Texas</option>
+                                    <option value="4">California</option>
                                 </select>
                             </form>
                         </div>
                         <div class="phone-number"><i class="flaticon-calling"></i><a href="tel:(+61)32456789"></a>(+61) 324 56 789</div>
-                        <div class="mail-address"><i class="flaticon-mail"></i><a href="mailto:info@Dotsdelivery.com">info@dotsdelivery.com</a></div>
+                        <div class="mail-address"><i class="flaticon-mail"></i><a href="mailto:info@dotsdelivery.com">info@dotsdelivery.com</a></div>
                     </div>
                 </div>
             </div>
@@ -764,43 +764,42 @@
                     <div class="inner-box wow fadeInUp animated" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-name: fadeInUp;">
                         <div class="icon"><span class="flaticon-shield"></span><i class="fas fa-check"></i></div>
                         <h4>Trasparent Pricing</h4>
-                        <div class="text">Indignation &amp; dislike men who are so <br>  beguiled all demoralized.</div>
+                        <div class="text">Transparent costing is ensured here, no hidden charges anywhere</div>
                     </div>
                 </div>
                 <div class="col-lg-4 whychooseus-block-two">
                     <div class="inner-box wow fadeInUp animated" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-name: fadeInUp;">
                         <div class="icon"><span class="flaticon-delivery"></span><i class="fas fa-check"></i></div>
                         <h4>On - Time Delivery</h4>
-                        <div class="text">Foresee the pain and trouble that are <br>  bound ensue and equal.</div>
+                        <div class="text">We are committed to delivering on time and never miss a deadline</div>
                     </div>
                 </div>
                 <div class="col-lg-4 whychooseus-block-two">
                     <div class="inner-box wow fadeInUp animated" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-name: fadeInUp;">
                         <div class="icon"><span class="flaticon-box"></span><i class="fas fa-check"></i></div>
                         <h4>Real Time Tracking</h4>
-                        <div class="text">These cases are perfectly simple easy <br> distinguish in a free hour.</div>
+                        <div class="text">Keeping track every step of your goods assures you of its presence every day</div>
                     </div>
                 </div>
                 <div class="col-lg-4 whychooseus-block-two">
                     <div class="inner-box wow fadeInUp animated" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-name: fadeInUp;">
                         <div class="icon"><span class="flaticon-24-hours"></span><i class="fas fa-check"></i></div>
                         <h4>24/7 Online Support</h4>
-                        <div class="text">These cases are perfectly simple easy <br> distinguish in a free hour.</div>
+                        <div class="text">We await your response 24 hours a day, so we can assure 100% satisfaction</div>
                     </div>
                 </div>
                 <div class="col-lg-4 whychooseus-block-two">
                     <div class="inner-box wow fadeInUp animated" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-name: fadeInUp;">
                         <div class="icon"><span class="flaticon-lawyer"></span><i class="fas fa-check"></i></div>
                         <h4>Experienced Staff</h4>
-                        <div class="text">Indignation &amp; dislike men who are so
-                            beguiled all demoralized.</div>
+                        <div class="text">Our valuable team possesses years of experience to solve your problems</div>
                     </div>
                 </div>
                 <div class="col-lg-4 whychooseus-block-two">
                     <div class="inner-box wow fadeInUp animated" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-name: fadeInUp;">
                         <div class="icon"><span class="flaticon-package-1"></span><i class="fas fa-check"></i></div>
                         <h4>Insurance &amp; guarantee</h4>
-                        <div class="text">Foresee the pain and trouble that are <br> bound ensue and equal.</div>
+                        <div class="text">Along with the insurance, we promise the best service from our end as well.</div>
                     </div>
                 </div>
             </div>
@@ -1001,7 +1000,7 @@
                                 </div>
                                 <div class="icon-box">
                                     <div class="icon"><span class="flaticon-mail"></span></div>
-                                    <div class="text"><strong>Email</strong><a href="mailto:info@Dotsdelivery.com">info@dotsdelivery.com</a></div>
+                                    <div class="text"><strong>Email</strong><a href="mailto:info@dotsdelivery.com">info@dotsdelivery.com</a></div>
                                 </div>                                
                                 <div class="icon-box">
                                     <div class="icon"><span class="flaticon-clock-1"></span></div>
