--- a/about.html
+++ b/about.html
@@ -366,8 +366,8 @@
         </div>
         <div class="overview">
             <div class="auto-container">
-                <div class="wrapper-box">
-                    <h2>Dotsdelivery has been operating in the US now, for over 78 years and are part <br>  of a reliable, global integrated network.</h2>
+                <div class="wrapper-box"> 
+                    <h2>Dotsdelivery has been operating in Canada, New York, Texas, California </h2>
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="text">
