--- a/service.html
+++ b/service.html
@@ -315,12 +315,7 @@
 
     <!-- Page Title -->
     <section class="page-title" style="background-image: url(assets/images/background/bg-20.jpg);">
-        <div class="background-text">
-            <div data-parallax='{"x": 100}'>
-                <div class="text-1">transida</div>
-                <div class="text-2">transida</div>
-            </div>                
-        </div>
+         
         <div class="auto-container">
             <div class="content-box">
                 <div class="content-wrapper">
@@ -456,7 +451,7 @@
         <div class="auto-container">
             <div class="sec-title text-center">
                 <div class="sub-title">Value Added Services</div>
-                <h2>Transida Offers Various Value Added <br>Services in Logisitcs</h2>
+                <h2>Dotsdelivery Offers Various Value Added <br>Services in Logisitcs</h2>
             </div>
             <div class="row">
                 <div class="col-xl-6 service-block-two">
